INTYGFV-12005: Java11 and Spring5